--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^1.9.3",
     "primeng": "^4.2.2",
     "rxjs": "^5.4.2",
