--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
+  "engines": {
+    "node": "~6.11.3",
+    "npm": "~3.10.10"
+  },
   "dependencies": {
     "@angular/animations": "^4.4.5",
     "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/cli": "1.4.2",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
@@ -25,6 +32,7 @@
     "@angular/router": "^4.2.4",
     "angular-in-memory-web-api": "^0.5.0",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^1.9.3",
     "primeng": "^4.2.2",
@@ -32,8 +40,6 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
